hard-gists/1714d2952c09b96ba2d8777f1cbf9de1/run.log
=== Docker Run Log for 1714d2952c09b96ba2d8777f1cbf9de1 ===
Started at: Mi 29. Okt 12:24:44 CET 2025

[2025-10-29 12:24:44] START: Running container for 1714d2952c09b96ba2d8777f1cbf9de1
[2025-10-29 12:24:44] SUCCESS: Container 5a1ca020e2a5c33d14ae7e1b398a92f9e9a833803e77d76f256ed953bc9b8a54 started for 1714d2952c09b96ba2d8777f1cbf9de1
=== Container logs for 1714d2952c09b96ba2d8777f1cbf9de1 ===
  File "/snippet.py", line 53
    print sys.stderr
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1714d2952c09b96ba2d8777f1cbf9de1 ===
[2025-10-29 12:24:46] INFO: Container 5a1ca020e2a5c33d14ae7e1b398a92f9e9a833803e77d76f256ed953bc9b8a54 has stopped
